<resources>
    <string name="app_name">P1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="application_name">Spargrisen</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">Main menu</string>
    <string name="title_activity_result">Overview</string>
    <string name="title_activity_income">Add income</string>
    <string name="title_activity_expense">Add expense</string>
    <string name="title_activity_outcome">Add expense</string>
    <string name="economic_overview">Economic overview</string>
    <string name="add_expense">Add expense</string>
    <string name="add_income">Add income</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="date">Date</string>
    <string name="category">Category</string>
    <string name="add">+ Add</string>
    <string name="amount">Amount</string>
    <string name="income_added">Income added</string>
    <string name="show_detailed_list">Show detailed list...</string>
    <string name="title_activity_income_list">Listing incomes</string>
    <string name="title_activity_expense_list">Listing expenses</string>
    <string name="expense_added">Expense added</string>
    <string name="choose_a_date">Choose a date...</string>
    <string name="total_income_text">Your total income is</string>
    <string name="total_expense_text">Your total expenses are</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="save_name">Save name</string>
    <string name="lastname">Lastname</string>
    <string name="firstname">Firstname</string>
    <string name="preference_file_name">xeronic.org.majja.p1.preferences</string>
    <string name="logged_in_as">Logged in as:</string>
    <string name="change_name">Click to change name</string>
    <string name="current_balance">Your current balance is: </string>
    <string name="good_balance_message">You are currently getting in more than you spend!</string>
    <string name="bad_balance_message">You are spending more than you can afford...</string>
    <string name="neutral_balance_message">Your economy couldn\'t be more tight.</string>
    <string name="close_button">Close</string>
</resources>
