<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="xeronic.org.majja.p1.IncomeActivity"
    android:background="#dd6666"
    android:orientation="vertical">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="xeronic.org.majja.p1.TopFragment"
        android:id="@+id/fragment12"
        tools:layout="@layout/fragment_top" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_alignParentBottom="true"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/title"
            android:id="@+id/textView"
            android:textColor="#fff"
            android:textSize="10sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expense_title_input"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/price"
            android:id="@+id/textView2"
            android:textColor="#fff"
            android:textSize="10sp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/expense_input"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/date"
            android:id="@+id/textView3"
            android:textColor="#fff"
            android:textSize="10sp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/expense_date_input"
                android:hint="ÅÅ-MM-DD"
                android:textSize="14sp" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_a_date"
                android:id="@+id/expense_choose_date_button"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="#fff"
                android:textColor="#dd6666" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/category"
            android:id="@+id/textView4"
            android:textColor="#fff"
            android:textSize="10sp" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/expense_spinner" />

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add_expense_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="right"
        android:textColor="#dd6666"
        android:background="#fff"
        android:outlineProvider="paddedBounds"
        android:layout_weight="0" />

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="xeronic.org.majja.p1.BottomFragment"
        android:id="@+id/fragment2"
        tools:layout="@layout/fragment_bottom"
        android:layout_weight="0" />

</LinearLayout>
