<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="xeronic.org.majja.p1.LoginActivity"
    android:background="#dd6666">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayout">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/firstname_input"
            android:hint="@string/firstname" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/lastname_input"
            android:hint="@string/lastname" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_name"
            android:id="@+id/login_button"
            android:background="#fff"
            android:textColor="#dd6666"
            android:onClick="login" />
    </LinearLayout>

    <fragment
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:name="xeronic.org.majja.p1.LogoFragment"
        android:id="@+id/fragment5"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        tools:layout="@layout/fragment_logo" />
</RelativeLayout>
