<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="xeronic.org.majja.p1.ResultActivity"
    android:background="#dd6666"
    android:orientation="vertical">

    <fragment
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:name="xeronic.org.majja.p1.TopFragment"
        android:id="@+id/fragment8"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        tools:layout="@layout/fragment_top"
        android:layout_marginBottom="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_income_text"
        android:id="@+id/total_income_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/show_detailed_list"
        android:id="@+id/income_detail_button"
        android:layout_below="@+id/total_income_text"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/total_expense_text"
        android:id="@+id/total_expense_text"
        android:layout_below="@+id/total_income_text"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:textColor="#fff" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/show_detailed_list"
        android:id="@+id/expense_detail_button"
        android:layout_below="@+id/total_expense_text"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Large Text"
        android:id="@+id/balance_text"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:textSize="24sp"
        android:textColor="#fff"
        android:layout_weight="1"
        android:gravity="center_vertical" />

    <fragment
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:name="xeronic.org.majja.p1.BottomFragment"
        android:id="@+id/fragment"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        tools:layout="@layout/fragment_bottom"
        android:layout_weight="1" />

</LinearLayout>
